--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ ipython = "*"
 kivy = {extras = ["base"], file = "https://github.com/kivy/kivy/archive/master.zip"}
 docutils = "*"
 pygments = "*"
+pygame = "*"
 
 [dev-packages]
 
